--- a/academic.html
+++ b/academic.html
@@ -3,11 +3,11 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Vinay Somawat - Competitive Programming</title>
+      <title>Aaron Bakker - Academic</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Portfolio webpage of Vinay Somawat" />
+      <meta name="description" content="Portfolio" />
       <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
-      <meta name="author" content="Vinay Somawat" />
+      <meta name="author" content="Aaron Bakker" />
       <!--Social Media icons--> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -31,7 +31,7 @@
        <script data-ad-client="ca-pub-4767382980457301" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
    </head>
    <body>
-       <canvas id="canvas"></canvas>
+      <canvas id="canvas"></canvas>
       <div id="colorlib-page">
          <div class="container-wrap">
             <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a> 
@@ -39,90 +39,100 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                  <h1 id="colorlib-logo"><a href="https://vinaysomawat.github.io">Vinay Somawat</a></h1>
-                  <p><strong>Competitive Programmer</strong></p>
+                  <h1 id="colorlib-logo"><a href="https://aaronbakker.github.io">Home</a></h1>
+                  <p><strong>Academic</strong></p>
                </div>
             </aside>
             <!----- main page--------->
             <div id="colorlib-main">
-               <!------Skills---------------->
-               <section class="colorlib-skills" data-section="skills">
+               <!------Projects---------------->
+               <section class="colorlib-skills" data-section="projects">
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-                           <!--	<span class="heading-meta">My Specialty</span> -->
-                           <h2>Profile Links</h2>
+                           <h1>Projects</h1>
                            <hr>
                         </div>
                      </div>
                      <div class="row">
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://www.codechef.com/users/somawatvinay">
-                                    <p style="color:firebrick">Codechef</p>
-                                 </a>
-                              </strong>
-                           </div>
-                        </div>
-<!--
+
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://codeforces.com/profile/somawatvinay">
-                                    <p style="color:deeppink">Codeforces</p>
-                                 </a>
-                              </strong>
+                           <div class="hovereffect">
+                              <img class="img-responsive" src='images/pollution.jpg' alt="" >
+                              <div class="overlay">
+                                 <h2>Environmental Contamination in Horseshoe Crabs</h2>
+                                 <button id="myBtn1">Content Coming Soon</button> <!-- Trigger/Open The Modal -->
+                              </div>
                            </div>
                         </div>
--->
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://auth.geeksforgeeks.org/user/somawatvinay/profile">
-                                    <p style="color:darkgreen">Geekforgeeks</p>
-                                 </a>
-                              </strong>
-                           </div>
-                        </div>
-<!--
+
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://www.hackerearth.com/@somawatvinay">
-                                    <p style="color:dimgrey">HackerEarth</p>
-                                 </a>
-                              </strong>
+                           <div class="hovereffect">
+                              <img class="img-responsive" src='images/horseshoecrab1.jpg' alt="" >
+                              <div class="overlay">
+                                 <h2>Maternal Transfer of Contaminants in Horseshoe Crabs</h2>
+                                 <button id="myBtn2">Content Coming Soon</button> <!-- Trigger/Open The Modal -->
+                              </div>
                            </div>
                         </div>
--->
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://www.hackerrank.com/somawatvinay">
-                                    <p style="color:forestgreen">HackerRank</p>
-                                 </a>
-                              </strong>
-                           </div>
-                        </div>
+
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <strong>
-                                 <a href="https://github.com/vinaysomawat">
-                                    <p style="color:black">GitHub</p>
-                                 </a>
-                              </strong>
+                           <div class="hovereffect">
+                              <img class="img-responsive" src='images/cichlid.jpg' alt="" >
+                              <div class="overlay">
+                                 <h2>Mate Choice in Convict Cichlids</h2>
+                                 <button id="myBtn3">Content Coming Soon</button> <!-- Trigger/Open The Modal -->
+                              </div>
+                           </div>
+                        </div>
+
+                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+                           <div class="hovereffect">
+                              <img class="img-responsive" src='images/cichlid.jpg' alt="" >
+                              <div class="overlay">
+                                 <h2>Mate Choice in Convict Cichlids</h2>
+                                 <button id="myBtn">Content Coming Soon</button> <!-- Trigger/Open The Modal -->
+                              </div>
                            </div>
                         </div>
                      </div>
                   </div>
+
+                     <div id="myModal1" class="modal">
+                        <!-- Modal content -->
+                        <div class="modal-content">
+                           <span class="close">&times;</span>
+                           <p>Environmental coming soon.</p>
+                        </div>
+                     </div>
+
+
+                     <div id="myModal2" class="modal">
+                        <!-- Modal content -->
+                        <div class="modal-content">
+                           <span class="close">&times;</span>
+                           <p>Maternal description coming soon.</p>
+                        </div>
+                     </div>
+
+
+                     <div id="myModal3" class="modal">
+                        <!-- Modal content -->
+                        <div class="modal-content">
+                           <span class="close">&times;</span>
+                           <p>Mate choice cotent coming soon.</p>
+                        </div>
+                     </div>
+
+
                </section>
+               <!------Publications---------------->
                <section class="colorlib-skills" data-section="skills">
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
                            <!--	<span class="heading-meta">My Specialty</span> -->
-                           <h2>Social Links</h2>
+                           <h1>Publications</h1>
                            <hr>
                         </div>
                      </div>
