--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
                             </ul>
                         </div>
                     </nav>
-                <p><strong href = "index/academic">Academic</strong></p>
+                <p><strong href = "https://aaronbakker.github.io/academic">Academic</strong></p>
                 <p><strong>About</strong></p>
                 <p><strong>Volunteer</strong></p>
                 <p><strong>Fun</strong></p>
