--- a/academic.html
+++ b/academic.html
@@ -43,7 +43,7 @@
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
                   <h1 id="colorlib-logo"><a href="https://aaronbakker.github.io">Home</></h1>
-                   <p><strong href = "https://aaronbakker.github.io/resume">Resume</strong></p>
+                   <p><strong href = "resume.html">Resume</strong></p>
                    <p><h1><a>Academic</a></h1></p>
                     <nav id="colorlib-main-menu" role="navigation" class="navbar">
                         <div id="navbar" class="collapse">
