--- a/academic.html
+++ b/academic.html
@@ -42,8 +42,8 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                  <h1 id="colorlib-logo"><a href="https://aaronbakker.github.io">Home</></h1>
-                   <p><strong href = "resume.html">Resume</strong></p>
+                   <h1 id="colorlib-logo"><a href="https://aaronbakker.github.io">Home</></h1>
+                   <h1 id="colorlib-logo"><a href = "resume.html">Resume</a></h1>
                    <p><h1><a>Academic</a></h1></p>
                     <nav id="colorlib-main-menu" role="navigation" class="navbar">
                         <div id="navbar" class="collapse">
