--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                  <h1 id="colorlib-logo"><a>Aaron Bakker</a></h1>
-                    <p><strong href = "resume.html">Resume</strong></p>
-                    <p><strong href = "academic.html">Academic</strong></p>
+                   <h1 id="colorlib-logo"><a href = "resume.html">Resume</a></h1>
+                   <h1 id="colorlib-logo"><a href = "academic.html">Academic</a></h1>
                     <p><strong>About</strong></p>
                     <p><strong>Volunteer</strong></p>
                     <p><strong>Fun</strong></p>
@@ -72,13 +71,26 @@
                                  </div>
                               </div>
                            </div>
+                            <div class="row">
+                                <p><h3>I'm Aaron, a Data Analyst/Developer living in Portland, OR. This is my portfolio page, a little project I decided to kick off to learn a little more on how to do web-development. Feel free to poke around, check out my other affiliated sites, or even look over my code development.</h3></p>
+                                <p><h3>I'm obsessed with data. I love finding ways to collect it, transform it, and qualitatively provide visuals to all types of audiences.</h3></p>
+                            </div>
+                                <br><br>
+                            <div class="row">
+                              <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                                 <div class="hire">
+                                    <h2>"Baseball is a soap opera that lends itself to probabilistic thinking." <span style="..."><br>- Micheal Lewis</span></h2>
+                                 </div>
+                              </div>
+                           </div>
+                                <br><br>
                            <div class="row">
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                                     <div class="hovereffect">
                                        <img class="img-responsive" src='images/mountains.jpg' alt="" >
                                           <div class="overlay">
                                              <h2>Resume</h2>
-				                             <p><a href="resume.html" target="_blank">Details</a></p>
+				                             <p><a href="resume.html">Details</a></p>
                                           </div>
                                     </div>
                               </div>
@@ -110,14 +122,6 @@
                                     </div>
                               </div>
                            </div>
-                           <br><br>
-                           <div class="row">
-                              <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-                                 <div class="hire">
-                                    <h2>"Baseball is a soap opera that lends itself to probabilistic thinking." <span style="..."><br>- Micheal Lewis</span></h2>
-                                 </div>
-                              </div>
-                           </div>
                         </div>
                      </div>
                   </div>
@@ -128,23 +132,15 @@
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-12">
-                           <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
-                              <div class="about-desc">
-                               <h1>Contact</h1>
-                              <hr>
-                               </div>
-                              <h3>Feel free to contact me with any questions! <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">Aaron dot K dot Bakker at Outlook</a></strong></h3>
-                           </div>
                            <div class="hire">
                                  <div align=center>
-                                    <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
                                     <p style="font-size: 30px; margin-bottom: 0px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/aaron-bakker166" style="color: white;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://github.com/aaronbakker" style="color: white;" class="fa fa-github"></a>&nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://scholar.google.com/citations?hl=en&user=ng-4XxAAAAAJ" style="color: white;" class="fa fa-graduation-cap"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                     </p>
                                  </div>
-                                 <p style="text-align: center; margin-bottom: -20px;"><strong>&copy; No Copyrights</strong></p>
-                              </div>
+                                    <p style="text-align: center; margin-bottom: -20px;"><strong>&copy; No Copyrights</strong></p>
+                           </div>
                         </div>
                      </div>
                   </div>
