--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
                             </ul>
                         </div>
                     </nav>
-                <p><strong href = "academic.html">Academic</strong></p>
+                <h1 id="colorlib-logo"><a href = "academic.html">Academic</a></h1>
                 <p><strong>About</strong></p>
                 <p><strong>Volunteer</strong></p>
                 <p><strong>Fun</strong></p>
