--- a/academic.html
+++ b/academic.html
@@ -55,9 +55,9 @@
                             </ul>
                         </div>
                     </nav>
-                   <p><strong>About</strong></p>
-                   <p><strong>Volunteer</strong></p>
-                   <p><strong>Fun</strong></p>
+                   <p><strong>About - Coming Soon</strong></p>
+                   <p><strong>Volunteer - Coming Soon</strong></p>
+                   <p><strong>Fun - Coming Soon</strong></p>
                </div>
             </aside>
             <!----- main page--------->
