--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
                    <h1 id="colorlib-logo"><a href = "resume.html">Resume</a></h1>
                    <h1 id="colorlib-logo"><a href = "academic.html">Academic</a></h1>
-                    <p><strong>About</strong></p>
-                    <p><strong>Volunteer</strong></p>
-                    <p><strong>Fun</strong></p>
+                    <p><strong>About - Coming Soon</strong></p>
+                    <p><strong>Volunteer - Coming Soon</strong></p>
+                    <p><strong>Fun - Coming Soon</strong></p>
                </div>
             </aside>
             <!--- Github ribbon ----------->
