--- a/resume.html
+++ b/resume.html
@@ -54,9 +54,9 @@
                         </div>
                     </nav>
                 <h1 id="colorlib-logo"><a href = "academic.html">Academic</a></h1>
-                <p><strong>About</strong></p>
-                <p><strong>Volunteer</strong></p>
-                <p><strong>Fun</strong></p>
+                <p><strong>About - Coming Soon</strong></p>
+                <p><strong>Volunteer - Coming Soon</strong></p>
+                <p><strong>Fun - Coming Soon</strong></p>
                </div>
             </aside>
             <!--- Github ribbon ----------->
