--- a/index.html
+++ b/index.html
@@ -73,19 +73,24 @@
                            </div>
                             <div class="row">
                                 <p><h3>I'm Aaron, a Data Analyst/Developer living in Portland, OR. This is my portfolio page, a little project I decided to kick off to learn a little more on how to do web-development. Feel free to poke around, check out my other affiliated sites, or even look over my code development.</h3></p>
-                                <p><h3>I'm obsessed with data. I love finding ways to collect it, transform it, and qualitatively provide visuals to all types of audiences.</h3></p>
+                                <p><h3>I'm obsessed with data. I love finding ways to collect it, transform it, and provide visuals to all types of audiences.</h3></p>
                             </div>
-                                <br><br>
-                            <div class="row">
-                              <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-                                 <div class="hire">
-                                    <h2>"Baseball is a soap opera that lends itself to probabilistic thinking." <span style="..."><br>- Micheal Lewis</span></h2>
-                                 </div>
-                              </div>
-                           </div>
-                                <br><br>
-                           <div class="row">
-                              <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                        </div>
+                     </div>
+                  </div>
+               </section>
+                <section class="colorlib-about" data-section="about">
+                    <div class="colorlib-narrow-content">
+                        <div class="row">
+                            <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+                                <div class="about-desc">
+                                    <h1>Explore</h1>
+                                    <hr>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row" style="padding-bottom: 15px">
+                            <div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
                                     <div class="hovereffect">
                                        <img class="img-responsive" src='images/mountains.jpg' alt="" >
                                           <div class="overlay">
@@ -94,7 +99,7 @@
                                           </div>
                                     </div>
                               </div>
-                              <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                            <div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
                                     <div class="hovereffect">
                                        <img class="img-responsive" src='images/bodyofwater.jpg' alt="" >
                                           <div class="overlay">
@@ -103,29 +108,38 @@
                                           </div>
                                     </div>
                               </div>
-                              <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                            <div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
                                     <div class="hovereffect">
                                        <img class="img-responsive" src='images/bridge.jpg' alt="" >
                                           <div class="overlay">
                                              <h2>Interests &<br>Fun</h2>
-				                             <p><a href="cp.html" target="_blank">Coming Soon</a></p>
+				                             <p><a href="" target="_blank">Coming Soon</a></p>
                                           </div>
                                     </div>
                               </div>
-                              <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
                                     <div class="hovereffect">
                                        <img class="img-responsive" src='images/leaf.jpg' alt="" >
                                           <div class="overlay">
                                              <h2>About</h2>
-				                             <p><a href="cp.html" target="_blank">Coming Soon</a></p>
+				                             <p><a href="" target="_blank">Coming Soon</a></p>
                                           </div>
                                     </div>
                               </div>
-                           </div>
+                            <div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
+                                    <div class="hovereffect">
+                                       <img class="img-responsive" src='images/waterfall.jpg' alt="" >
+                                          <div class="overlay">
+                                             <h2>Volunteer</h2>
+				                             <p><a href="" target="_blank">Coming Soon</a></p>
+                                          </div>
+                                    </div>
+                              </div>
                         </div>
-                     </div>
-                  </div>
-               </section>
+                    </div>
+                </section>
                <br><br>
                <!--------Contact---------->
                <section class="colorlib-contact" data-section="contact">
@@ -134,19 +148,20 @@
                         <div class="col-md-12">
                            <div class="hire">
                                  <div align=center>
+                                    <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
                                     <p style="font-size: 30px; margin-bottom: 0px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/aaron-bakker166" style="color: white;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://github.com/aaronbakker" style="color: white;" class="fa fa-github"></a>&nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://scholar.google.com/citations?hl=en&user=ng-4XxAAAAAJ" style="color: white;" class="fa fa-graduation-cap"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                     </p>
                                  </div>
-                                    <p style="text-align: center; margin-bottom: -20px;"><strong>&copy; No Copyrights</strong></p>
-                           </div>
+                                 <p style="text-align: center; margin-bottom: -20px;"><strong>&copy; No Copyrights</strong></p>
+                              </div>
                         </div>
                      </div>
                   </div>
                </section>
-            </div>
             <!-- end:colorlib-main -->
+            </div>
          </div>
          <!-- end:container-wrap -->
       </div>
