--- a/resume.html
+++ b/resume.html
@@ -70,6 +70,27 @@
             <style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
             <!----- main page--------->
             <div id="colorlib-main">
+                <section class="colorlib-about" data-section="about">
+                  <div class="colorlib-narrow-content">
+                     <div class="row">
+                        <div class="col-md-12">
+                           <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+                              <div class="col-md-12">
+                                 <div class="about-desc">
+                                    <h1>Aaron Bakker</h1>
+                                    <hr>
+                                    <h3>Data Analyst & Developer | Portland, OR</h3>
+                                 </div>
+                              </div>
+                           </div>
+                            <div class="row">
+                                <p><h3>Data Analyst with 8 years of data wrangling and analytics experience. I am driven and effective in implementing processes to streamline and build analytics around data to make qualitative and informed business decisions. I am also passionate about learning new skills that can be used to innovate and aspire others within teams and communities. I take pride in motivating not only myself to grow personally and professionally, but encouraging others as well.</h3></p>
+                            </div>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+                <br><br>
                <!------Languages---------------->
                <section class="colorlib-languages" data-section="language">
                   <div class="colorlib-narrow-content">
@@ -158,162 +179,162 @@
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src='images/skate.jpg' alt="" />
+                                 <img src='images/image1.jpg' alt="" />
                                  <h1>Tableau</h1>
-                                 <p>Tableau</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src='images/basketball.jpg' alt="" />
+                                 <img src='images/image2.jpg' alt="" />
                                  <h1>Power BI</h1>
-                                 <p>Power BI</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src='images/gym.jpg' alt="" />
+                                 <img src='images/image3.jpg' alt="" />
                                  <h1>Sharepoint</h1>
-                                 <p>Sharepoint</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src='images/weights.jpg' alt="" />
+                                 <img src='images/image4.jpg' alt="" />
                                  <h1>Azure DevOps/Git</h1>
-                                 <p>Azure DevOps/Git</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src='images/baseball.jpg' alt="" />
+                                 <img src='images/image5.jpg' alt="" />
                                  <h1>Flowable</h1>
-                                 <p>Flowable</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src='images/soccer.jpg' alt="" />
+                                 <img src='images/image6.jpg' alt="" />
                                  <h1>MS Office</h1>
-                                 <p>MS Office </p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src='images/run.jpg' alt="" />
+                                 <img src='images/image7.jpg' alt="" />
                                  <h1>Jira</h1>
-                                 <p>Jira</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm4.staticflickr.com/3766/12953056854_b8cdf14f21.jpg" alt="" />
+                                 <img src='images/image8.jpg' alt="" />
                                  <h1>Confluence</h1>
-                                 <p>Confluence</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm7.staticflickr.com/6139/5986939269_10721b8017.jpg" alt="" />
+                                 <img src='images/image9.jpg' alt="" />
                                  <h1>Service Now</h1>
-                                 <p>Service Now</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm4.staticflickr.com/2827/10384422264_d9c7299146.jpg" alt="" />
+                                 <img src='images/image10.jpg' alt="" />
                                  <h1>SPSS</h1>
-                                 <p>SPSS</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm8.staticflickr.com/7163/6822904141_50277565c3.jpg" alt="" />
+                                 <img src='images/image11.jpg' alt="" />
                                  <h1>Mulesoft</h1>
-                                 <p>Mulesoft</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm4.staticflickr.com/3771/13199704015_72aa535bd7.jpg" alt="" />
+                                 <img src='images/image12.jpg' alt="" />
                                  <h1>Collibra</h1>
-                                 <p>Collibra</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm7.staticflickr.com/6083/6055581292_d94c2d90e3.jpg" alt="" />
+                                 <img src='images/image13.jpg' alt="" />
                                  <h1>Azure DataBricks</h1>
-                                 <p>Azure DataBricks</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm8.staticflickr.com/7187/6895047173_d4b1a0d798.jpg" alt="" />
+                                 <img src='images/image14.jpg' alt="" />
                                  <h1>MatLab</h1>
-                                 <p>MatLab</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm3.staticflickr.com/2878/10944255073_973d2cd25c.jpg" alt="" />
+                                 <img src='images/image15.jpg' alt="" />
                                  <h1>R Studio</h1>
-                                 <p>R Studio</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm9.staticflickr.com/8461/8048823381_0fbc2d8efb.jpg" alt="" />
+                                 <img src='images/image16.jpg' alt="" />
                                  <h1>Pandas</h1>
-                                 <p>Pandas</p>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm3.staticflickr.com/2827/10384422264_d9c7299146.jpg" alt="" />
-                                 <h1>This is a title</h1>
-                                 <p>Some sample text about the article this hexagon leads to</p>
+                                 <img src='images/image17.jpg' alt="" />
+                                 <h1></h1>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
                            <li class="hex">
                              <div class="hexIn">
                                <a class="hexLink" href="#">
-                                 <img src="https://farm7.staticflickr.com/6217/6216951796_e50778255c.jpg" alt="" />
-                                 <h1>This is a title</h1>
-                                 <p>Some sample text about the article this hexagon leads to</p>
+                                 <img src='images/image18.jpg' alt="" />
+                                 <h1></h1>
+                                 <p></p>
                                </a>
                              </div>
                            </li>
