--- a/resume.html
+++ b/resume.html
@@ -85,6 +85,7 @@
                            </div>
                             <div class="row">
                                 <p><h3>Data Analyst with 8 years of data wrangling and analytics experience. I am driven and effective in implementing processes to streamline and build analytics around data to make qualitative and informed business decisions. I am also passionate about learning new skills that can be used to innovate and aspire others within teams and communities. I take pride in motivating not only myself to grow personally and professionally, but encouraging others as well.</h3></p>
+                                <p><h3>Download Resume | <a href="documents/Resume_AaronBakker_05_2020.pdf" style="color: black;" class="fa fa-file"></a></h3></p>
                             </div>
                         </div>
                      </div>
