--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
                             </ul>
                         </div>
                     </nav>
-                <h1 id="colorlib-logo"><a href = "academic.html">Academic</a></h1>
+                   <p><strong><a href = "academic.html" style="color:white">Academic</a></strong></p>
                 <p><strong>About - Coming Soon</strong></p>
                 <p><strong>Volunteer - Coming Soon</strong></p>
                 <p><strong>Fun - Coming Soon</strong></p>
