--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <div class="row">
                                 <p><h3>I'm Aaron, a Data Analyst/Developer living in Portland, OR. This is my portfolio page, a little project I decided to kick off to learn a little more on how to do web-development. Feel free to poke around, check out my other affiliated sites, or even look over my code development.</h3></p>
                                 <p><h3>I'm obsessed with data. I love finding ways to collect it, transform it, and provide visuals to all types of audiences.</h3></p>
-                                <p><h3>*This site is a work-in-progress*</h3></p>
+                                <p><h3><b>*This site is a work-in-progress*</b></h3></p>
                             </div>
                         </div>
                      </div>
