--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                   <h1 id="colorlib-logo"><a href = "resume.html">Resume</a></h1>
-                   <h1 id="colorlib-logo"><a href = "academic.html">Academic</a></h1>
+                   <p><strong><a href = "resume.html" style="color:white">Resume</a></strong></p>
+                   <p><strong><a href = "academic.html" style="color:white">Academic</a></strong></p>
                     <p><strong>About - Coming Soon</strong></p>
                     <p><strong>Volunteer - Coming Soon</strong></p>
                     <p><strong>Fun - Coming Soon</strong></p>
@@ -147,6 +147,13 @@
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-12">
+                            <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
+                              <div class="about-desc">
+                               <h1>Contact</h1>
+                              <hr>
+                               </div>
+                              <h3>Feel free to contact me with any questions! <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">Aaron dot K dot Bakker at Outlook</a></strong></h3>
+                           </div>
                            <div class="hire">
                                  <div align=center>
                                     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
