--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
+                   <p><h1><a>Home</a></h1></p>
                    <p><strong><a href = "resume.html" style="color:white">Resume</a></strong></p>
                    <p><strong><a href = "academic.html" style="color:white">Academic</a></strong></p>
                     <p><strong>About - Coming Soon</strong></p>
