--- a/academic.html
+++ b/academic.html
@@ -42,7 +42,7 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/IMG_-wl1xai.jpg);"></div>
-                   <h1 id="colorlib-logo"><a href="https://aaronbakker.github.io">Home</></h1>
+                   <p><strong><a href = "https://aaronbakker.github.io" style="color:white">Home</a></strong></p>
                    <p><strong><a href = "resume.html" style="color:white">Resume</a></strong></p>
                    <p><h1><a>Academic</a></h1></p>
                     <nav id="colorlib-main-menu" role="navigation" class="navbar">
