--- a/academic.html
+++ b/academic.html
@@ -56,7 +56,7 @@
                         </div>
                     </nav>
                    <p><strong>About - Coming Soon</strong></p>
-                   <p><strong>Volunteer - Coming Soon</strong></p>
+                   <p><strong><a href = "volunteer.html" style="color:white">Volunteer</a></strong></p>
                    <p><strong>Fun - Coming Soon</strong></p>
                </div>
             </aside>
