--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                    <p><strong><a href = "resume.html" style="color:white">Resume</a></strong></p>
                    <p><strong><a href = "academic.html" style="color:white">Academic</a></strong></p>
                     <p><strong>About - Coming Soon</strong></p>
-                    <p><strong>Volunteer - Coming Soon</strong></p>
+                   <p><strong><a href = "volunteer.html" style="color:white">Volunteer</a></strong></p>
                     <p><strong>Fun - Coming Soon</strong></p>
                </div>
             </aside>
