--- a/resume.html
+++ b/resume.html
@@ -54,9 +54,9 @@
                         </div>
                     </nav>
                    <p><strong><a href = "academic.html" style="color:white">Academic</a></strong></p>
-                <p><strong>About - Coming Soon</strong></p>
-                <p><strong>Volunteer - Coming Soon</strong></p>
-                <p><strong>Fun - Coming Soon</strong></p>
+                    <p><strong>About - Coming Soon</strong></p>
+                   <p><strong><a href = "volunteer.html" style="color:white">Volunteer</a></strong></p>
+                    <p><strong>Fun - Coming Soon</strong></p>
                </div>
             </aside>
             <!--- Github ribbon ----------->
