--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                                     <div class="hovereffect">
                                        <img class="img-responsive" src='images/bridge.jpg' alt="" >
                                           <div class="overlay">
-                                             <h2>Interests &<br>Fun</h2>
-				                             <p><a href="" target="_blank">Coming Soon</a></p>
+                                             <h2>About</h2>
+				                             <p><a href="">Coming Soon</a></p>
                                           </div>
                                     </div>
                               </div>
@@ -125,8 +125,8 @@
                                     <div class="hovereffect">
                                        <img class="img-responsive" src='images/leaf.jpg' alt="" >
                                           <div class="overlay">
-                                             <h2>About</h2>
-				                             <p><a href="" target="_blank">Coming Soon</a></p>
+                                             <h2>Volunteer</h2>
+				                             <p><a href="volunteer.html">Details</a></p>
                                           </div>
                                     </div>
                               </div>
@@ -134,8 +134,8 @@
                                     <div class="hovereffect">
                                        <img class="img-responsive" src='images/waterfall.jpg' alt="" >
                                           <div class="overlay">
-                                             <h2>Volunteer</h2>
-				                             <p><a href="" target="_blank">Coming Soon</a></p>
+                                             <h2>Interests &<br>Fun</h2>
+				                             <p><a href="">Coming Soon</a></p>
                                           </div>
                                     </div>
                               </div>
