--- a/index.html
+++ b/index.html
@@ -156,14 +156,20 @@
                               <h3>Feel free to contact me with any questions! <strong><a href = "mailto: Aaron.K.Bakker@outlook.com">Aaron dot K dot Bakker at Outlook</a></strong></h3>
                            </div>
                            <div class="hire">
-                                 <div align=center>
+                                 <div align="center">
                                     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
                                     <p style="font-size: 30px; margin-bottom: 0px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.linkedin.com/in/aaron-bakker166" style="color: white;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://github.com/aaronbakker" style="color: white;" class="fa fa-github"></a>&nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://scholar.google.com/citations?hl=en&user=ng-4XxAAAAAJ" style="color: white;" class="fa fa-graduation-cap"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                     </p>
                                  </div>
-                                 <p style="text-align: center; margin-bottom: -20px;"><strong>&copy; No Copyrights</strong></p>
+                                    <p style="text-align: center; margin-bottom: -20px;"><strong>&copy; No Copyrights</strong></p>
+                               <br>
+                               <div align="center">
+                                   <p><a href="https://www.hitwebcounter.com" target="_blank">
+                                            <img src="https://hitwebcounter.com/counter/counter.php?page=7349931&style=0010&nbdigits=2&type=ip&initCount=0" title="Web Counter" Alt="counter free"   border="0" >
+                                   </a></p>
+                               </div>
                               </div>
                         </div>
                      </div>
